# grantd

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOSTED-CHECKLIST.md  LICENSE  README.md  SECURITY.md  llms.txt  package-lock.json  package.json  server.json  tsconfig.json
content/: how-to-let-your-ai-agent-act-on-a-users-behalf.md
content/launch/: announcement-x-linkedin.md  directory-listings.md  reddit-r-llmdevs.md  show-hn.md
examples/: README.md  crewai_tool.py  langgraph_tool.py
migrations/: 0001_init.sql  0002_connect_ui.sql  0003_rate_limits.sql
scripts/: bootstrap.ts  keygen.ts  mcp-test.ts  migrate.ts  rotate-db-password.ts  rotate-key.ts  set-integration.ts
sdk/: README.md  index.ts  package.json  test.ts  tsconfig.json
sdk-py/: README.md  pyproject.toml  test.py
sdk-py/agentauth/: __init__.py  client.py  errors.py  models.py
sdk-py/grantd/: __init__.py  client.py  errors.py
site/: index.html
src/: auth.ts  config.ts  connections.ts  crypto.ts  db.ts  mcp.ts  oauth.ts  providers.ts  ratelimit.ts  server.ts
test/: crypto.test.ts  oauth.test.ts
