[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grantd"
version = "0.0.1"
description = "OAuth-for-agents Python SDK — let your AI agent securely act on a user's behalf across third-party APIs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rafael Vecchi" }]
keywords = ["oauth", "ai-agents", "mcp", "authorization", "token-vault", "grantd"]
dependencies = ["httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["grantd"]
